# Hospital-Hotline-AI

./: package-lock.json
hospital-hotline-assistant-api/: .env.example  ADK_MIGRATION_PLAN.md  pyproject.toml
hospital-hotline-assistant-api/app/: config.py  main.py  schemas.py
hospital-hotline-assistant-api/app/agent/: __init__.py  triage_agent.py  triage_config.py  triage_runner.py  triage_state.py
hospital-hotline-assistant-api/app/agent/prompts/: __init__.py  triage_system.py
hospital-hotline-assistant-api/app/agent/tools/: __init__.py  alert_tools.py  pii_tools.py  triage_tools.py
hospital-hotline-assistant-api/app/data/: er_triage_five_level_system.json
hospital-hotline-assistant-api/app/services/: __init__.py  adk_agent.py  google_tts.py  live_voice_service.py  pii_handoff.py  slack_notifier.py  triage_service.py  voice_pii.py
hospital-hotline-assistant-api/scripts/: demo_alert_tools.py  demo_pii_tools.py  demo_triage_prompt.py  demo_triage_runner.py  demo_triage_tools.py
hospital-hotline-assistant-web/src/api/: client.ts  index.ts  types.ts
hospital-hotline-assistant-web/src/components/: SecurePiiForm.tsx
hospital-hotline-assistant-web/src/hooks/: useChat.ts  useSpeech.ts  useVoiceCall.ts  voicePrewarm.ts
hospital-hotline-assistant-web/src/i18n/: resources.ts
hospital-hotline-assistant-web/src/pages/: CallPage.tsx  ChatPage.tsx  LandingPage.tsx
hospital-hotline-assistant-web/src/styles/: global.css
