[project]
name = "hospital-hotline-assistant-api"
version = "0.1.0"
description = "AI-assisted hospital hotline triage API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.1,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "google-genai>=1.72.0,<2.0.0",
    "google-cloud-texttospeech>=2.16.0",
    "google-cloud-speech>=2.27.0",
    "google-adk>=2.1.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
